--- a/composer.json
+++ b/composer.json
@@ -2,21 +2,6 @@
     "name": "hdpk/erp",
     "description": "HDP(K) LTD ERP System",
     "type": "project",
-    "require": {
-        "php": "^8.1",
-        "laravel/framework": "^10.0",
-        "barryvdh/laravel-dompdf": "^2.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "app/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
-        }
-    }
-    "name": "laravel/laravel",
-    "type": "project",
-    "description": "The Laravel Framework.",
     "keywords": [
         "framework",
         "laravel"
@@ -26,7 +11,9 @@
         "php": "^8.1",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "barryvdh/laravel-dompdf": "^2.0",
+        "spatie/laravel-permission": "^6.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
